--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -87,6 +87,7 @@
 				<a target="_blank" href="https://github.com/bengfarrell" rel="noopener"><img alt="github" src="/images/social-1_round-github.svg"/></a>
 				<a target="_blank" href="https://www.linkedin.com/in/bfarrellforever/" rel="noopener"><img alt="linkedin" src="/images/social-1_round-linkedin.svg"/></a>
 				<a target="_blank" href="https://www.instagram.com/ben.4.real/" rel="noopener"><img alt="instagram" src="/images/social-1_round-instagram.svg"/></a>
+				<a target="_blank" href="https://benfarrell.com/feed/feed.json" rel="noopener"><img alt="rss" src="/images/social-1_round-rss.svg"/></a>
 			</div>
 
 			<div class="recent-moments">
@@ -97,7 +98,7 @@
 	<div id="copyright" class="row">
 		<div class="columns">
 			&copy;&nbsp;2024&nbsp;					  <a href="https://benfarrell.com/" title="Ben Farrell - creating digital hugs">
-			Ben Farrell					  </a>
+			Ben Farrell					  </a> &nbsp;&nbsp;ben@benfarrell.com
 		</div>
 	</div><!-- #copyright -->
 
