- added prism for code-prettying - changed footer shader - removed sun gallery from halftone blog - added 2 new blog posts

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -38,6 +38,10 @@
 	<link rel="alternate" type="application/json+oembed" href="https://benfarrell.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fbenfarrell.com%2F"/>
 	<link rel="alternate" type="text/xml+oembed" href="https://benfarrell.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fbenfarrell.com%2F&#038;format=xml"/>
 	<link href="/css/index.css" rel="stylesheet" />
+	<link
+		href="/css/prism-okaidia.css"
+		rel="stylesheet"
+	/>
 	<style type="text/css">@font-face {
 		font-family: 'richicons';
 		src: url('/font/richicons.eot?14809390');
